# SSD-Simulator

./: .gitignore  CMakeLists.txt  README.md
include/: Block.h  FTLMapper.h  FlashMemory.h  GarbageCollector.h  IORequest.h  LatencyModel.h  Page.h  PageCache.h  PhysicalAddress.h  ReadRequest.h  RequestQueue.h  SSDController.h  StatsTracker.h  TraceParser.h  WriteRequest.h
src/: Block.cpp  FTLMapper.cpp  FlashMemory.cpp  GarbageCollector.cpp  LatencyModel.cpp  Page.cpp  PageCache.cpp  ReadRequest.cpp  RequestQueue.cpp  SSDController.cpp  StatsTracker.cpp  TraceParser.cpp  WriteRequest.cpp  main.cpp
traces/: sample.trace
visualizer/: index.html
